# rust-slint-riscv64-musl-demo

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-3d-export.sh  build-3d-open-viewer.sh  build-cross.sh  build-icons.sh  build-licherv.sh  build.rs  copy-lichee.sh  notes.md
.cargo/: config.toml
.experimental/docker/: build-docker.sh
assets/3d/button/: tactilebutton-vymedzovac.stl
assets/3d/case/: 3dcase.blend  3dcase.blend1  measurements.drawio  player-backcover.stl  player-case.stl
assets/3d/lichee/: LicheeRV_Nano_W_Step.mtl
assets/3d/stl/: player-action-button-holder.stl  player-action-button.stl  player-backcover.stl  player-case.stl
assets/3d/ucad/: case.µcad  export.sh  new-case.µcad  unordered-info.md
src/: audio_player.rs  awedio_extensions.rs  button_handler.rs  debouncer.rs  file_media_source.rs  gpio_button_service.rs  headset.rs  main.rs  media_source.rs  media_source_trait.rs  player.rs  settings_manager.rs
src/audio/: utils.rs
src/debouncer/: mod.rs  tokio_debouncer.rs
src/display/: utils.rs
src/entity/: item.rs  items_json_metadata.rs  items_metadata.rs  items_pictures.rs  items_progress.rs  items_progress_history.rs  mod.rs  picture.rs  setting.rs
src/headset/: headset.rs  headset_button.rs  headset_event.rs  mod.rs
src/media_source/: file_media_source.rs  media_source.rs  media_source_chapter.rs  media_source_command.rs  media_source_event.rs  media_source_image_codec.rs  media_source_item.rs  media_source_metadata.rs  media_source_picture.rs  media_source_trait.rs  media_type.rs  mod.rs  utils.rs
src/player/: mod.rs  player.rs  player_command.rs  player_event.rs  trigger_action.rs
src/serde_json_mods/: duration_millis.rs  mod.rs
src/slint_helpers/: load_cover_result.rs  mod.rs  utils.rs
src/time/: mod.rs
ui/: globals.slint  home.slint  main.slint  navigator.slint
ui/_components/: PiListItem.slint  Player.slint
ui/_components/buttons/: IconButton.slint  NextButton.slint  PlayButton.slint  PreviousButton.slint  ToggleButton.slint  TogglePlayButton.slint
ui/_components/icons/: NextIcon.slint  PauseIcon.slint  PlayIcon.slint  PreviousIcon.slint
ui/home/: home_button.slint
ui/main/: audiobooks.slint  details.slint  home.slint  music.slint  player.slint  search.slint  settings.slint
ui/main/home/: main_menu_button.slint
