[package]
name = "rust-slint-riscv64-musl-demo"
version = "0.1.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/pilabor/resonance"

# software renderer is mandatory for riscv64 compilation but also works on ArchLinux
[dependencies.slint]
version = "1.14.1" # or your desired version
features = ["backend-linuxkms-noseat", "renderer-software", "compat-1-2"]
# git = "https://github.com/slint-ui/slint.git"
# branch = "master"
# version = "1.15.0"

#default-features = false

[build-dependencies]
# lucide-slint = "0.562.0"
slint-build = "1.14.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"       # Optimize for binary size
strip = true          # Automatically strip symbols from the binary
debug = true          # debug information
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Optimize for single codegen unit (better performance)
panic = 'abort'       # Abort on panic (smaller binary size)

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16.0"
rodio = "0.21.1"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2"
# bytes = "1.10.1"
# dirs = "6.0.0"
evdev = "0.13.2"
async-trait = "0.1.89"
lofty = "0.22.4"
mp4ameta = "0.13.0"
sea-orm = { version = "2.0.0-rc.21", features = [ "sqlx-sqlite", "macros", "runtime-tokio", "debug-print", "with-chrono", "with-json" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
sea-orm-migration = "2.0.0-rc.21"
chrono = "0.4.42"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
file-id = "0.2.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
image = "0.25.9"
debouncer = "0.1.3"
# input = "0.9.1"
# libc = "0.2.177"
